# Venir

./: Cargo.toml  rust-toolchain.toml  shell.nix
src/: consts.rs  lib.rs  main.rs  stub_structs.rs  verify_crate.rs  vir_optimizers.rs  vstd_utils.rs
