[package]
name = "venir"
version = "0.1.0"
edition = "2021"

[dependencies]
vir = { git = "https://github.com/Aristotelis2002/verus-lib.git", package = "vir", branch = "synced_main" }
rust_verify = { git = "https://github.com/Aristotelis2002/verus-lib.git", package = "rust_verify", branch = "synced_main" }
air = { git = "https://github.com/Aristotelis2002/verus-lib.git", package = "air", branch = "synced_main" }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0"
bincode = "1.0.1"
regex = "^1.0"
